# auto-publish-rust-package

./: CHANGELOG.md  Cargo.toml
.github/workflows/: publish.yml  release-please.yml
